# vocab-reduction

./: .gitignore  JOURNAL.md  README.md  convert_apertus.sbatch  latency_benchmark.py  memory_latency_benchmark.py  model_checkpoint_gen.py  prune_checkpoint.py  run_bench.sbatch  submit-apertus-300m.sh  submit-llama3-300m-multimodal.sh  test_inference_apertus_300m.py
evals/: .gitignore  README-300M.md  README.md  config.json  config_modifcation.py  fixed_configuration_apertus.py  fixed_modeling_apertus.py  loss_viz.py  model_modification.py  pyproject.toml  tokenizer_config.json  wandb_push.py
evals/configs/: all_tasks.json  automation-fp8.json  automation.json  automation_custom.json  eval_1b.json  eval_300m.example.json  eval_300m.json  tasks.json
evals/configs/alignment/: tasks_english.txt  tasks_english_main_table.txt  tasks_multilingual.txt  tasks_multilingual_main_table.txt
evals/containers/: Dockerfile  constraints-packages.txt  env-official.toml  requirements-packages.txt  requirements-setup.txt
evals/examples/: eval_apertus_70b.sh  eval_apertus_8b.sh  eval_eurollm_1b.sh  eval_eurollm_9b.sh  eval_llama3.3_70b.sh  eval_llama3_70b.sh  eval_llama3_8b.sh  eval_olmo2_32b.sh  eval_olmo2_7b.sh  eval_qwen2_7b.sh  eval_qwen3_32b.sh  eval_smollm2_1b.sh
evals/examples/alignment/: hf_base_runner.sh  hf_eval_apertus_8b_sft.sh  hf_eval_multiple_apertus_base_models.sh  hf_eval_multiple_apertus_models.sh  hf_eval_multiple_other_base_models.sh  hf_eval_multiple_other_models.sh  (+1 more)
evals/scripts/: automate.py  evaluate.sbatch  evaluate_hf.sbatch  update_wandb.py
(+20 files in other folders)
